syntax = "proto3";
package leo.status;
option go_package = "github.com/go-leo/leo/v3/statusx/internal/statuspb;statuspb";

import "google/protobuf/any.proto";
import "google/rpc/status.proto";
import "google/rpc/error_details.proto";
import "google/rpc/http.proto";

// Error is the error.
message Error {
  // grpc_status is the grpc status.
  google.rpc.Status grpc_status = 1;

  // detail is the details.
  DetailInfo detail_info = 2;
}

message Identifier {
  string value = 1;
}

message StatusCode {
  int32 value = 1;
}

message Header {
  // The HTTP response headers. The ordering of the headers is significant.
  // Multiple headers with the same key may present for the response.
  repeated google.rpc.HttpHeader headers = 13;
}

message DetailInfo {
  // The HTTP status code that corresponds to `google.rpc.Status.code`.
  StatusCode status_code = 1;

  // This distinguish between two Status objects as being the same when
  // both code and status are identical.
  Identifier identifier = 2;

  // error_info is the error info.
  google.rpc.ErrorInfo error_info = 3;

  // retry_info is the retry info.
  google.rpc.RetryInfo retry_info = 4;

  // debug_info is the debug info.
  google.rpc.DebugInfo debug_info = 5;

  // quota_failure is the quota failure.
  google.rpc.QuotaFailure quota_failure = 6;

  // precondition_failure is the precondition failure.
  google.rpc.PreconditionFailure precondition_failure = 7;

  // bad_request is the bad request.
  google.rpc.BadRequest bad_request = 8;

  // request_info is the request info.
  google.rpc.RequestInfo request_info = 9;

  // resource_info is the resource info.
  google.rpc.ResourceInfo resource_info = 10;

  // help is the help.
  google.rpc.Help help = 11;

  // localized_message is the localized message.
  google.rpc.LocalizedMessage localized_message = 12;

  // The HTTP response headers. The ordering of the headers is significant.
  // Multiple headers with the same key may present for the response.
  Header header = 13;

  // extra are the other detail info.
  google.protobuf.Any extra = 14;
}

